--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "element-plus": "^2.9.6",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@playwright/test": "^1.51.0",
     "@tsconfig/node22": "^22.0.0",
+    "@types/axios": "^0.9.36",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
