--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "llmoj-web",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -21,7 +20,9 @@
     "marked": "^15.0.7",
     "marked-highlight": "^2.2.1",
     "mitt": "^3.0.1",
+    "monaco-editor": "^0.52.2",
     "pinia": "^3.0.1",
+    "vite-plugin-monaco-editor": "^1.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
