--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "marked-highlight": "^2.2.1",
     "mitt": "^3.0.1",
     "monaco-editor": "^0.52.2",
+    "pdfjs-dist": "^5.1.91",
     "pinia": "^3.0.1",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vue": "^3.5.13",
@@ -36,6 +37,7 @@
     "@types/axios": "^0.9.36",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.9",
+    "@types/pdfjs-dist": "^2.10.377",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vitest/eslint-plugin": "^1.1.36",
