update: PDF的显示 1. 使用了专门的互斥锁来避免重复渲染 2. 旋转或缩放时，保存和恢复相对位置 3. 可以缩放适应屏幕

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
+    "async-mutex": "^0.5.0",
     "axios": "^1.8.3",
     "dayjs": "^1.11.13",
     "element-plus": "^2.9.6",
